[package]
name = "extract_rtp_stream_payload"
version = "0.1.0"
authors = ["MayamaTakeshi <mayamatakeshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { git = "https://github.com/ebfull/pcap.git" }
pktparse = { git = "https://github.com/bestouff/pktparse-rs.git" }
nom = { git = "https://github.com/Geal/nom.git" }
rurtp = { git = "https://github.com/AtheMathmo/rurtp.git" }
